--- a/TSB100UserProfileService/TSB100UserProfileService.csproj
+++ b/TSB100UserProfileService/TSB100UserProfileService.csproj
@@ -65,11 +65,14 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountStatus.cs" />
+    <Compile Include="Review.cs" />
     <Compile Include="UserProfileService.svc.cs">
       <DependentUpon>UserProfileService.svc</DependentUpon>
     </Compile>
     <Compile Include="IUserProfileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserType.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
