--- a/TSB100UserProfileService/TSB100UserProfileService.csproj
+++ b/TSB100UserProfileService/TSB100UserProfileService.csproj
@@ -75,6 +75,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\LoginServiceRef\LoginService.disco" />
+    <None Include="Connected Services\LoginServiceRef\configuration91.svcinfo" />
+    <None Include="Connected Services\LoginServiceRef\configuration.svcinfo" />
+    <None Include="Connected Services\LoginServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="UserProfileModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>UserProfileModel.Context.cs</LastGenOutput>
@@ -90,6 +97,14 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\LoginServiceRef\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceAdapters\LoginAdapter.cs" />
+    <Compile Include="Validation\StringValidator.cs" />
+    <Compile Include="Validation\UserValidator.cs" />
     <Content Include="App_Code\StartUp.cs" />
     <Compile Include="DataTransferObjects\NewUser.cs" />
     <Compile Include="DataTransferObjects\Review.cs" />
@@ -127,6 +142,25 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>UserProfileModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Connected Services\LoginServiceRef\LoginService.wsdl" />
+    <None Include="Connected Services\LoginServiceRef\LoginService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\LoginServiceRef\LoginService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\LoginServiceRef\LoginService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\LoginServiceRef\LoginService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.User.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.Users.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="packages.config" />
     <Content Include="UserProfileModel.edmx.diagram">
       <DependentUpon>UserProfileModel.edmx</DependentUpon>
@@ -140,6 +174,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\LoginServiceRef\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
