--- a/TSB100UserProfileService/Web.config
+++ b/TSB100UserProfileService/Web.config
@@ -12,6 +12,16 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ILoginService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://193.10.202.76/LoginProject/LoginProject/LoginService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoginService"
+        contract="LoginServiceRef.ILoginService" name="BasicHttpBinding_ILoginService" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior>
