Fixat en bugg (UpdateUser() går på UserId istället för Username), samt olika anslutningssträngar för Debug/Release.

--- a/TSB100UserProfileService/Web.config
+++ b/TSB100UserProfileService/Web.config
@@ -47,6 +47,7 @@
   </system.webServer>
   <connectionStrings>
     <add name="UserProfileEntities" connectionString="metadata=res://*/UserProfileModel.csdl|res://*/UserProfileModel.ssdl|res://*/UserProfileModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=UserProfile;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserProfileEntities_Release" connectionString="metadata=res://*/UserProfileModel.csdl|res://*/UserProfileModel.ssdl|res://*/UserProfileModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=UserProfile;User ID=sa; Password=TSB100sql;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
