--- a/TSB100UserProfileService/TSB100UserProfileService.csproj
+++ b/TSB100UserProfileService/TSB100UserProfileService.csproj
@@ -105,7 +105,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="ServiceAdapters\LoginAdapter.cs" />
+    <Compile Include="FileReader.cs" />
     <Compile Include="Validation\StringValidator.cs" />
     <Compile Include="Validation\UserValidator.cs" />
     <Content Include="App_Code\StartUp.cs" />
@@ -155,13 +155,16 @@
     <None Include="Connected Services\LoginServiceRef\LoginService2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\LoginServiceRef\LoginService3.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.User.datasource">
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.ReturnUser.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
-    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.ReturnUser.datasource">
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.InterfaceBlockedUser.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.InterfaceFlaggedUser.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\LoginServiceRef\TSB100UserProfileService.LoginServiceRef.InterfaceUser.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="packages.config" />
